--- a/module4-solution/src/menuapp/templates/categoriescomponent.template.html
+++ b/module4-solution/src/menuapp/templates/categoriescomponent.template.html
@@ -1,6 +1,6 @@
-<a ui-sref="home">Home</a> &lt; <span>Categories</span>
+<a ui-sref="home">Home</a> &lt; <span>Menu Categories</span>
 <ul>
   <li ng-repeat="item in $ctrl.categoriesList">
-    {{ item.short_name }} of <a ui-sref= "items({categoryShortName:item.short_name})">{{ item.name }}</a>
+    <a ui-sref= "items({categoryShortName:item.short_name,name:item.name})">{{ item.name }}</a>
   </li>
 </ul>
